--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,12 @@
         <title>{% block title %} Zephyr {% endblock %}</title>
 
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            {{ encore_entry_link_tags('main') }}
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+            {{ encore_entry_script_tags('main') }}
+            {% block importmap %}{{ importmap('main') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
